--- a/src/app/Compartido/detalle-empleo/detalle-empleo.component.css
+++ b/src/app/Compartido/detalle-empleo/detalle-empleo.component.css
@@ -14,6 +14,7 @@
 }
 .detalle-empleo-imagen{
     width:300px;
+    height: 300px;
     border-radius:15px ;
 }
 .detalle-empleo-cabecera-descripcion{
@@ -39,7 +40,7 @@
     color: white;
 }
 .detalle-empleo-contenido{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('src/assets/backgrounds/background-02-01.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('src/assets/backgrounds/background-02-01.jpg');
 /*     background-color: #313131; */
     padding: 5%;
 }
