--- a/src/app/Compartido/home/home.component.html
+++ b/src/app/Compartido/home/home.component.html
@@ -13,17 +13,15 @@
                 <form class="buscador-box-formulario">
                     <div fxLayoutAlign="row">
                     <div>
-                        <mat-form-field class="buscador-box-formulario-input" appearance="fill">
+                        
+                        <mat-form-field class="buscador-box-formulario-input" appearance="fill" >
                             <mat-label>Categoria</mat-label>
-                            <input type="text"
-                                 matInput
-                                 aria-label="Categoria"
-                                 [matAutocomplete]="auto">
-                            <mat-autocomplete #auto="matAutocomplete">
-                                <mat-option *ngFor="let option of options" [value]="option">
-                                    {{option}}
-                                </mat-option>
-                             </mat-autocomplete>
+                            <mat-select  >
+                              <mat-option *ngFor="let option of categorias" [value]="option.id">
+                                {{option.nombre}}
+                              </mat-option>
+                            </mat-select>
+                            
                         </mat-form-field>
                     </div>
     
@@ -63,9 +61,9 @@
         <h1 class="ofertas-recientes-titulo">Ofertas Recientes</h1>
     </div >
     <div fxLayout="row" fxLayoutAlign="center">
-        <!-- <div fxLayout="column" >
-            <mat-card class="ofertas-recientes-card"  *ngFor="let option of Ofertas_recientes1">
-                <img mat-card-image class ="ofertas-recientes-card-image" src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        <div fxLayout="column" >
+            <mat-card class="ofertas-recientes-card"  *ngFor="let option of Ofertas1">
+                <img mat-card-image class ="ofertas-recientes-card-image" [src]="option.foto_perfil" >
                 <mat-card-content>
                     <mat-card-title class="card-titulo">
                         {{option.puesto_empleo}}
@@ -76,17 +74,17 @@
                     </mat-card-subtitle>
                     <div fxLayoutAlign="space-between">
                         <span class="card-fecha">Fecha de publicacion: <br> {{option.fecha_publicacion}}</span>
-                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id_empleo_publicado]">
+                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id]">
                         Ver detalles
                         </button>
                     </div>
                 </mat-card-content>
             </mat-card>
             
-        </div> -->
-        <!-- <div fxLayout="column" >
-            <mat-card class="ofertas-recientes-card" *ngFor="let option of Ofertas_recientes2">
-                <img mat-card-image class ="ofertas-recientes-card-image" src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        </div>
+        <div fxLayout="column" >
+            <mat-card class="ofertas-recientes-card" *ngFor="let option of Ofertas2">
+                <img mat-card-image class ="ofertas-recientes-card-image" [src]="option.foto_perfil" >
                 <mat-card-content>
                     <mat-card-title class="card-titulo">
                         {{option.puesto_empleo}}
@@ -97,53 +95,14 @@
                     </mat-card-subtitle>
                     <div fxLayoutAlign="space-between">
                         <span class="card-fecha">Fecha de publicacion: <br> {{option.fecha_publicacion}}</span>
-                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id_empleo_publicado]">
-                        Ver detalles
-                        </button>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div> -->
-        <div fxLayout="column" >
-            <mat-card class="ofertas-recientes-card" *ngFor="let option of prueba">
-                <img mat-card-image class ="ofertas-recientes-card-image" src="..\..\assets\imagenes\bitrix.jpg" >
-                <mat-card-content>
-                    <mat-card-title class="card-titulo">
-                        Puesto empleo
-                    </mat-card-title>
-                    <br>
-                    <mat-card-subtitle class="card-subtitulo">
-                        Nombre empresa
-                    </mat-card-subtitle>
-                    <div fxLayoutAlign="space-between">
-                        <span class="card-fecha">Fecha de publicacion: <br> 11/12/2022</span>
-                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id_empleo_publicado]">
+                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id]">
                         Ver detalles
                         </button>
                     </div>
                 </mat-card-content>
             </mat-card>
         </div>
-        <div fxLayout="column" >
-            <mat-card class="ofertas-recientes-card" *ngFor="let option of prueba2">
-                <img mat-card-image class ="ofertas-recientes-card-image" src="..\..\assets\imagenes\bitrix.jpg" >
-                <mat-card-content>
-                    <mat-card-title class="card-titulo">
-                        Puesto empleo
-                    </mat-card-title>
-                    <br>
-                    <mat-card-subtitle class="card-subtitulo">
-                        Nombre empresa
-                    </mat-card-subtitle>
-                    <div fxLayoutAlign="space-between">
-                        <span class="card-fecha">Fecha de publicacion: <br> 11/12/2022</span>
-                        <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id_empleo_publicado]">
-                        Ver detalles
-                        </button>
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
+        
 
     </div>
     
